# netbox-bootstrap

./: .envrc  .gitignore  Makefile  README.md  ansible.cfg  create-devices.yaml  load-basic-data.yaml  pyproject.toml  tasks.mk
group_vars/: all.yaml
host_vars/: localhost.yaml
roles/create_device/tasks/: main.yaml
roles/create_device_roles/tasks/: main.yaml
roles/create_device_types/tasks/: main.yaml
roles/create_devices/tasks/: main.yaml
roles/create_locations/tasks/: main.yaml
roles/create_manufacturers/tasks/: main.yaml
roles/create_racks/tasks/: main.yaml
roles/create_regions/tasks/: main.yaml
roles/create_sites/tasks/: main.yaml
roles/manage_ipam/tasks/: ip_prefixes.yaml  ip_vlan_roles.yaml  main.yaml  vlan.yaml
scripts/: export.sh
